# raglens

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-pet-food-db.mjs  extract-map-dimensions.mjs
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  connections.rs  disconnect.rs  dispatch.rs  foreground.rs  interfaces.rs  inventory_store.rs  lib.rs  logger.rs  main.rs  map_image_cache.rs  packet.rs  pet_state_store.rs  process.rs  sounds.rs  transparency.rs  window_rect.rs
src-tauri/src/decoders/: README.md  aid.rs  ban.rs  char_name.rs  exp_gain.rs  exp_totals.rs  inventory.rs  latam_warp.rs  mod.rs  pet_feed.rs  pet_feed_ack.rs  pet_state.rs  player_move.rs  restart.rs  server_move.rs  warp.rs
src/addons/: registry.ts  types.ts
src/addons/disconnect-notify/: DisconnectNotifySettings.tsx  config.ts  manifest.ts  notifications.test.ts  notifications.ts  useDisconnectService.ts
src/addons/last-teleport/: LastTeleportControls.tsx  LastTeleportHelpModal.tsx  LastTeleportMap.tsx  LastTeleportSettings.tsx  config.ts  last-teleport-controls.css  last-teleport-map.css  manifest.ts  map-dimensions-data.ts  map-dimensions.ts  shared.ts  useTeleportHistory.ts
src/addons/pet-feeder/: PetFeeder.tsx  PetFeederSettings.tsx  config.ts  format.test.ts  format.ts  manifest.ts  ntfy.ts  pet-feeder.css  pet_food_db.json  sounds.ts  usePetState.ts  winNotify.ts
src/addons/xp-meter/: XpMeter.tsx  XpMeterSettings.tsx  config.ts  format.test.ts  format.ts  manifest.ts  useXpEvents.ts  xp-meter.css
src/components/: AddonInfoModal.tsx  AddonRow.tsx  AddonSettingsModal.tsx  AppearanceSection.tsx  ClientPicker.tsx  ConnectionPicker.tsx  Modal.tsx  NicPicker.tsx  NtfyHelpModal.tsx  UpdateBanner.tsx
src/hooks/: useAddonConfig.ts  useAddonShortcuts.ts  useAddonState.ts  useCaptureSession.ts  useClients.ts  useConnections.ts  useDraggableWindow.ts  useLatestRelease.ts  useOverlayAppearance.ts  useScaleAspectRatio.ts  useSelectedPid.ts
src/i18n/: pt-br.ts
src/lib/: appearance.test.ts  appearance.ts  events.ts  format.ts  invoke.ts  overlays.ts  store.ts  types.ts  updates.test.ts  updates.ts
src/routes/: MainWindow.tsx  OverlayHost.tsx
src/styles/: main.css  overlay.css
