[package]
name = "raglens"
version = "0.1.0"
description = "WoW-addon-style overlay framework for Ragnarok Online"
authors = ["adson"]
edition = "2021"

[lib]
name = "raglens_lib"
# Desktop-only build. The mobile-style crate-types are unnecessary and
# triple our compile time on CI.
crate-type = ["rlib"]

[[bin]]
name = "raglens"
path = "src/main.rs"
# Skip test-binary build for the bin target. main.rs has no tests, and
# the test binary would still inherit build.rs's admin manifest, which
# makes `cargo test` require elevation on Windows. Library tests still
# run normally.
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  # Required for GetAdaptersAddresses / IP_ADAPTER_ADDRESSES_LH —
  # they're gated behind this Ndis feature in windows 0.58.
  "Win32_NetworkManagement_Ndis",
  # Process info for the client picker: PID owner of a TCP 4-tuple
  # (GetExtendedTcpTable), executable name and creation time.
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Foundation",
  # Foreground-window polling for the per-PID overlay visibility loop.
  "Win32_UI_WindowsAndMessaging",
  # GetProcAddress / LoadLibraryW for the undocumented
  # SetWindowCompositionAttribute used in transparency.rs.
  "Win32_System_LibraryLoader",
  # DwmExtendFrameIntoClientArea — the documented DWM call we pair
  # with the transparent accent policy. Extending the frame margins
  # by -1 tells DWM the entire client area is part of the composed
  # window, which is what makes per-pixel alpha actually paint
  # through on Windows. The MARGINS struct lives behind
  # `Win32_UI_Controls`.
  "Win32_Graphics_Dwm",
  "Win32_UI_Controls",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
