[package]
name = "raglens"
version = "0.1.8"
description = "WoW-addon-style overlay framework for Ragnarok Online"
authors = ["adson"]
edition = "2021"

[lib]
name = "raglens_lib"
# Desktop-only build. The mobile-style crate-types are unnecessary and
# triple our compile time on CI.
crate-type = ["rlib"]

[[bin]]
name = "raglens"
path = "src/main.rs"
# Skip test-binary build for the bin target. main.rs has no tests, and
# the test binary would still inherit build.rs's admin manifest, which
# makes `cargo test` require elevation on Windows. Library tests still
# run normally.
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  # Required for GetAdaptersAddresses / IP_ADAPTER_ADDRESSES_LH —
  # they're gated behind this Ndis feature in windows 0.58.
  "Win32_NetworkManagement_Ndis",
  # Process info for the client picker: PID owner of a TCP 4-tuple
  # (GetExtendedTcpTable), executable name and creation time.
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Foundation",
  # Foreground-window polling for the per-PID overlay visibility loop.
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
